--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>WeatherForecast</groupId>
-  <artifactId>WeatherForecast</artifactId>
+  <groupId>java-weather-app</groupId>
+  <artifactId>java-weather-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>WeatherForecast</name>
+  <name>java-weather-app</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
